--- a/package.json
+++ b/package.json
@@ -20,5 +20,20 @@
   "bugs": {
     "url": "https://github.com/longshihui/release-script/issues"
   },
-  "homepage": "https://github.com/longshihui/release-script#readme"
+  "homepage": "https://github.com/longshihui/release-script#readme",
+  "devDependencies": {
+    "husky": "^2.4.0",
+    "lint-staged": "^8.2.0",
+    "prettier": "^1.18.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js}": [
+      "prettier --write"
+    ]
+  }
 }
