--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/longshihui/release-script#readme",
   "devDependencies": {
+    "commitizen": "^3.1.1",
     "husky": "^2.4.0",
     "lint-staged": "^8.2.0",
     "prettier": "^1.18.0"
@@ -35,5 +36,13 @@
     "**/*.{js}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "cz-conventional-changelog": "^2.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
