--- a/package.json
+++ b/package.json
@@ -38,7 +38,15 @@
     ]
   },
   "dependencies": {
-    "cz-conventional-changelog": "^2.1.0"
+    "chalk": "^2.4.2",
+    "conventional-changelog": "^3.1.8",
+    "cz-conventional-changelog": "^2.1.0",
+    "dargs": "^6.1.0",
+    "detect-indent": "^6.0.0",
+    "git-branch": "^2.0.1",
+    "inquirer": "^6.3.1",
+    "mockjs": "^1.0.1-beta3",
+    "semver": "^6.1.1"
   },
   "config": {
     "commitizen": {
